read me update for codeship

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+{<img alt="Status?branch=master" src="https://www.codeship.io/projects/8ea083e0-2b11-0132-aac5-12594f1cfd26/status?branch=master" />}[https://www.codeship.io/projects/38481]
+
 == INSTERVIEW
 
 This is a sample code, so I can practice.
